@@ -656,6 +656,13 @@ R"doc(Returns the number of components in this link.
 Returns:
     the number of components.)doc";
 
+// Docstring regina::python::doc::Link_::countTrivialComponents
+static const char *countTrivialComponents =
+R"doc(Returns the number of zero-crossing unknot components in this link.
+
+Returns:
+    the number of zero-crossing unknot components.)doc";
+
 // Docstring regina::python::doc::Link_::crossing
 static const char *crossing =
 R"doc(Returns a pointer to the crossing at the given index within this link.
@@ -2536,14 +2543,16 @@ restrictions:
 
 * They cannot encode zero-crossing unknot components (i.e., components
   for which the component() function returns a null strand). Any such
-  components will simply be omitted from the code.
+  components will simply be omitted from the code. You can detect such
+  components by calling countTrivialComponents().
 
 * If a link has any components that consist entirely of over-crossings
   (which must be unknots "placed on top of" the link diagram), a
   planar diagram code does not carry enough data to reconstruct the
   _orientation_ of these components. The topology will be preserved,
   but in general the combinatorics of such a link diagram cannot be
-  reconstructed faithfully.
+  reconstructed faithfully. You can detect such components by calling
+  pdAmbiguous().
 
 If you need a text code that can work with these types of link
 diagrams, you can always use Jenkins' format instead.
@@ -2608,6 +2617,25 @@ variant of pd() that writes directly to an output stream.
 
 Returns:
     the planar diagram code, as described above.)doc";
+
+// Docstring regina::python::doc::Link_::pdAmbiguous
+static const char *pdAmbiguous =
+R"doc(Determines whether this link has any components whose orientations
+cannot be recovered from a planar diagram code.
+
+Such components must have at least one crossing, and must consist
+_entirely_ of over-crossings. These are essentially unknotted loops
+that are "placed on top of" the remainder of the link diagram.
+
+Note that planar diagrams have another limitation, which is that they
+cannot represent zero-crossing components at all (any such components
+are omitted from planar diagram codes entirely). Zero-crossing
+components are _not_ recognised by this routine, but can be recognised
+instead by calling countTrivialComponents().
+
+Returns:
+    ``True`` if and only if some component of this link has at least
+    one crossing and consists entirely of over-crossings.)doc";
 
 // Docstring regina::python::doc::Link_::pdData
 static const char *pdData =
