@@ -116,6 +116,8 @@ Version 7.4  [ (to be announced) ]
             - New routine hash(), which uses the tight encoding.
         Class Link:
             - New routine makeAlternating().
+            - New routines countTrivialComponents() and pdAmbiguous(), to help
+              understand the limitations of planar diagram codes.
             - New routine hash(), which uses the tight encoding.
             - Fixed a bug where calling resolve() would not clear out any
               cached link polynomials that had already been computed.
